--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -185,7 +185,7 @@ jobs:
           venv\Scripts\Activate.ps1
           python3 create_pyinstaller_file.py
           pyinstaller -w --noconfirm --hidden-import PySide6 `
-               --add-data ${{ env.PROJ_DIR }}\resources;.\ `
+               --add-data ${{ env.PROJ_DIR }}\resources;. `
                --icon ${{ env.PROJ_DIR }}\resources\icon.png `
                --hidden-import pkg_resources `
                --workpath "${{ env.BUILD_DIR }}" `
