--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -186,7 +186,7 @@ jobs:
           python create_pyinstaller_file.py
           pyinstaller -w --noconfirm --hidden-import PySide6 `
                --add-data "${{ env.PROJ_DIR }}\resources;." `
-               -i ${{ env.PROJ_DIR }}\resources\icon.png `
+               -i ${{ env.PROJ_DIR }}\resources\icon.ico `
                --hidden-import pkg_resources `
                --workpath "${{ env.BUILD_DIR }}" `
                --distpath "${{ env.DIST_DIR }}" `
