--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -166,7 +166,7 @@ jobs:
       - name: Setup Env Vars
         run: |
           $FILE_LOC = (Get-ChildItem -Path .\ -Filter info.py -Recurse -ErrorAction SilentlyContinue -Force | foreach {$_.FullName})
-          $VER = (findstr version $FILE_LOC).split("'")[1]
+          $VER = (findstr /b version $FILE_LOC).split('"')[1]
           echo "VER=$VER" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           echo "BUILD_DIR=build" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           echo "DIST_DIR=dist" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
