--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Joey Yakimowich-Payne <jyapayne@pm.me>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.12"
+python = ">=3.10,<=3.13"
 pyside6 = "^6.5.2"
 certifi = "^2023.7.22"
 
