--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -20,14 +20,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
         matrix:
-            os: [ubuntu-20.04, ubuntu-22.04]
+            os: [ubuntu-22.04]
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: '3.11.4'
+          python-version: '3.13.0'
 
       - name: Install prereqs
         run: |
@@ -97,7 +97,7 @@ jobs:
           tar -czvf ${{ env.PROJ_MOD }}.tar.gz ${{ env.PROJ_MOD }}-tar/*
           ci/deb-script.sh
 
-      - uses: jiro4989/build-deb-action@v2
+      - uses: jiro4989/build-deb-action@v3
         with:
           package: ${{ env.PROJ_PATH }}-${{ env.VER }}-${{ matrix.os }}-deb
           package_root: .debpkg
@@ -108,7 +108,7 @@ jobs:
           desc: "${{ env.DESCRIPTION }}"
 
       - name: Deploy tar
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ env.PROJ_PATH }}_${{ env.VER }}_${{ matrix.os }}-tar
           path: |
@@ -116,7 +116,7 @@ jobs:
           retention-days: 1
 
       - name: Deploy deb
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ env.PROJ_PATH }}_${{ env.VER }}_${{ matrix.os }}-deb
           path: |
@@ -140,11 +140,11 @@ jobs:
             os: [windows-2019]
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: '3.11.4'
+          python-version: '3.13.0'
 
       - name: Check Python install
         run: |
@@ -205,7 +205,7 @@ jobs:
 
 
       - name: Deploy Zip
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ env.PROJECT_NAME }}_${{ env.VER }}-${{ matrix.os }}-zip
           path: |
@@ -229,14 +229,14 @@ jobs:
             os: [macos-11, macos-12]
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Homebrew
         run: |
           NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
           brew install create-dmg
       - name: Setup Python
         run: |
-          wget https://www.python.org/ftp/python/3.11.4/python-3.11.4-macos11.pkg
+          wget https://www.python.org/ftp/python/3.13.0/python-3.13.0-macos11.pkg
           sudo installer -verbose -pkg ./python-3*.pkg -target /
           echo "/Library/Frameworks/Python.framework/Versions/3.11/bin" >> $GITHUB_PATH
           curl -sSL https://install.python-poetry.org | python3 -
@@ -334,7 +334,7 @@ jobs:
           ls -al ${{ env.DIST_DIR }}
 
       - name: Deploy Zip
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ env.PROJECT_NAME }}_${{ env.VER }}-${{ matrix.os }}-zip
           path: |
@@ -342,7 +342,7 @@ jobs:
           retention-days: 1
 
       - name: Deploy DMG
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ env.PROJECT_NAME }}_${{ env.VER }}-${{ matrix.os}}-dmg
           path: |
