--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -226,7 +226,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
         matrix:
-            os: [macos-11, macos-12]
+            os: [macos-14]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
